--- a/Views/AuthApi/Register.cshtml
+++ b/Views/AuthApi/Register.cshtml
@@ -398,6 +398,10 @@
             if (data.success) {
                 // Redirect based on role
                 const role = data.user_info.roleName;
+                 // Save tokens in localStorage
+        localStorage.setItem("access_token", data.access_token);
+        localStorage.setItem("refresh_token", data.refresh_token);
+        localStorage.setItem("role", data.user_info.roleName);
 
                 if (role === "Volunteer") {
                     window.location.href = '/Dashboard/Volunteer';
