--- a/Views/Dashboard/Admin/Areas.cshtml
+++ b/Views/Dashboard/Admin/Areas.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = "~/Views/Shared/Sidebar/_AdminLayout.cshtml";
+    ViewData["Title"] = "Affected Areas";
+}
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
